[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/Stats.gd" type="Script" id=1]
[ext_resource path="res://src/UI/GraphEdit.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://graphics/themes/dark.tres" type="Theme" id=4]

[node name="Main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel"]
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenBoard" type="Button" parent="VBoxContainer/Panel/HBoxContainer"]
margin_right = 88.0
margin_bottom = 25.0
text = "Open Board"

[node name="SaveBoard" type="Button" parent="VBoxContainer/Panel/HBoxContainer"]
margin_left = 92.0
margin_right = 174.0
margin_bottom = 25.0
text = "Save Board"

[node name="GraphEdit" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 29.0
scroll_offset = Vector2( 0, -20 )

[node name="Stats" type="Panel" parent="VBoxContainer"]
margin_top = 570.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 30 )
script = ExtResource( 1 )

[node name="Completed" type="Label" parent="VBoxContainer/Stats"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -11.0
margin_right = 174.0
margin_bottom = 11.0
text = "Completed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeDate" type="Label" parent="VBoxContainer/Stats"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -11.0
margin_right = 155.0
margin_bottom = 11.0
text = "Day|Date|Time"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="VBoxContainer/Stats"]
autostart = true

[node name="ProjName" type="Label" parent="VBoxContainer/Stats"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -252.0
margin_top = -15.0
margin_bottom = 15.0
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogs" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathOptions" type="WindowDialog" parent="Dialogs"]
margin_right = 354.0
margin_bottom = 265.0

[node name="VBoxContainer" type="VBoxContainer" parent="Dialogs/PathOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = -107.5
margin_right = 165.0
margin_bottom = 90.5
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Dialogs/PathOptions/VBoxContainer"]
margin_right = 330.0
margin_bottom = 22.0
text = "Paste Link"
align = 1

[node name="LineEdit" type="LineEdit" parent="Dialogs/PathOptions/VBoxContainer"]
margin_top = 26.0
margin_right = 330.0
margin_bottom = 48.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Comment" type="TextEdit" parent="Dialogs/PathOptions/VBoxContainer"]
margin_top = 52.0
margin_right = 330.0
margin_bottom = 198.0
size_flags_vertical = 3
text = "Comment..."

[node name="Load" type="Button" parent="Dialogs/PathOptions"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.0
margin_top = -30.0908
margin_right = 21.0
margin_bottom = -10.0908
rect_min_size = Vector2( 42, 20 )
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMenu" type="PopupMenu" parent="Dialogs"]
popup_exclusive = true

[node name="Detail" type="AcceptDialog" parent="Dialogs"]
margin_right = 388.0
margin_bottom = 278.0
window_title = "Detail"
resizable = true
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Dialogs/Detail"]
margin_left = 8.0
margin_top = 8.0
margin_right = 380.0
margin_bottom = 240.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -149.07
margin_top = 38.1407
margin_right = -19.0703
margin_bottom = 138.141
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 20.0
margin_bottom = 100.0

[node name="Add" type="Button" parent="HBoxContainer/Buttons"]
margin_right = 20.0
margin_bottom = 22.0
text = "+"

[node name="Delete" type="Button" parent="HBoxContainer/Buttons"]
margin_top = 26.0
margin_right = 20.0
margin_bottom = 48.0
text = "-"

[node name="MoveUp" type="Button" parent="HBoxContainer/Buttons"]
margin_top = 52.0
margin_right = 20.0
margin_bottom = 74.0
text = "^"

[node name="MoveDown" type="Button" parent="HBoxContainer/Buttons"]
margin_top = 78.0
margin_right = 20.0
margin_bottom = 100.0
text = "v"

[node name="Boards" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 24.0
margin_right = 130.0
margin_bottom = 100.0
rect_min_size = Vector2( 106, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="OpenBoard" type="FileDialog" parent="."]
margin_right = 537.0
margin_bottom = 398.0
rect_min_size = Vector2( 170, 59.5 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.vplan" )

[node name="SaveBoard" type="FileDialog" parent="."]
margin_right = 537.0
margin_bottom = 398.0
rect_min_size = Vector2( 170, 59.5 )
resizable = true
access = 2
filters = PoolStringArray( "*.vplan" )
__meta__ = {
"_editor_description_": ""
}

[connection signal="tree_exiting" from="." to="." method="_on_Main_tree_exiting"]
[connection signal="pressed" from="VBoxContainer/Panel/HBoxContainer/OpenBoard" to="." method="_on_OpenBoard_pressed"]
[connection signal="pressed" from="VBoxContainer/Panel/HBoxContainer/SaveBoard" to="." method="_on_SaveBoard_pressed"]
[connection signal="timeout" from="VBoxContainer/Stats/Timer" to="VBoxContainer/Stats" method="_on_Timer_timeout"]
[connection signal="index_pressed" from="Dialogs/RightMenu" to="." method="_on_RightMenu_index_pressed"]
[connection signal="mouse_entered" from="Dialogs/RightMenu" to="." method="_on_RightMenu_mouse_entered"]
[connection signal="mouse_exited" from="Dialogs/RightMenu" to="." method="_on_RightMenu_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Buttons/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="HBoxContainer/Buttons/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="HBoxContainer/Buttons/MoveUp" to="." method="_on_MoveUp_pressed"]
[connection signal="pressed" from="HBoxContainer/Buttons/MoveDown" to="." method="_on_MoveDown_pressed"]
[connection signal="file_selected" from="OpenBoard" to="." method="load_project"]
[connection signal="file_selected" from="SaveBoard" to="." method="save_project"]
